--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
             <div class="photo-col">
                 <img class="photo" src="./assets/images/2012.jpg">
             </div>
-            <div class="photo-col-r"></div>
+            <div class="photo-col-r">
+                <span class="caption-title">2012</span>
+                </br>
+                <span class="caption">our first photo together</span>
+            </div>
         </div>
         <div class="photo-row">
             <div class="photo-col">
+                <span class="caption-title">2013</span>
+                </br>
+                <span class="caption">simpler times. the year we graduated & started working.</span>
             </div>
             <div class="photo-col-r">
                 <img class="photo" src="./assets/images/2013.jpg">
@@ -38,10 +45,17 @@
             <div class="photo-col">
                 <img class="photo" src="./assets/images/2014.jpg">
             </div>
-            <div class="photo-col-r"></div>
+            <div class="photo-col-r">
+                <span class="caption-title">2014</span>
+                </br>
+                <span class="caption">check-up day. malungkot ka kasi may sakit na naman ako.</span>
+            </div>
         </div>
         <div class="photo-row">
             <div class="photo-col">
+                <span class="caption-title">2015</span>
+                </br>
+                <span class="caption">our most spontaneous trip. salamat ideyatech haha.</span>
             </div>
             <div class="photo-col-r">
                 <img class="photo" src="./assets/images/2015.jpg">
@@ -51,10 +65,17 @@
             <div class="photo-col">
                 <img class="photo" src="./assets/images/2016.jpg">
             </div>
-            <div class="photo-col-r"></div>
+            <div class="photo-col-r">
+                <span class="caption-title">2016</span>
+                </br>
+                <span class="caption">tam-awan village, baguio.</span>
+            </div>
         </div>
         <div class="photo-row">
             <div class="photo-col">
+                <span class="caption-title">2017</span>
+                </br>
+                <span class="caption">very tough and very sad year for you. but look at you now? awuw.</span>
             </div>
             <div class="photo-col-r">
                 <img class="photo" src="./assets/images/2017.jpg">
@@ -64,10 +85,17 @@
             <div class="photo-col">
                 <img class="photo" src="./assets/images/2018.jpg">
             </div>
-            <div class="photo-col-r"></div>
+            <div class="photo-col-r">
+                <span class="caption-title">2018</span>
+                </br>
+                <span class="caption">that travel na puro kamalasan tayo sa first day but ended up to be one of the best experiences we had.</span>
+            </div>
         </div>
         <div class="photo-row">
             <div class="photo-col">
+                <span class="caption-title">2019</span>
+                </br>
+                <span class="caption">last travel before the pandemic. nakakamiss.</span>
             </div>
             <div class="photo-col-r">
                 <img class="photo" src="./assets/images/2019.jpg">
@@ -77,46 +105,107 @@
             <div class="photo-col">
                 <img class="photo" src="./assets/images/2020.jpg">
             </div>
-            <div class="photo-col-r"></div>
+            <div class="photo-col-r">
+                <span class="caption-title">2020</span>
+                </br>
+                <span class="caption">??????????</span>
+            </div>
         </div>
         <div class="photo-row">
             <div class="photo-col">
+                <span class="caption-title">2021</span>
+                </br>
+                <span class="caption">here we are now.</span>
             </div>
             <div class="photo-col-r">
                 <img class="photo" src="./assets/images/2021.jpg">
+            </div>
+        </div>
+        <div class="last-page">
+            <div class="last-page-div">
+                <span class="last-caption-title">#ASonnyDayForAbbie</span>
+                </br>
+                <span class="caption">Soon.</span>
             </div>
         </div>
     </div>
     <div class="parallax__cover__mobile">
         <div class="photo-row">
             <img class="photo" src="./assets/images/2012.jpg">
+            </br></br>
+            <span class="caption-title">2012</span>
+            </br>
+            <span class="caption">our first photo together</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2013.jpg">
+            </br></br>
+            <span class="caption-title">2013</span>
+            </br>
+            <span class="caption">simpler times. the year we graduated & started working.</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2014.jpg">
+            </br></br>
+            <span class="caption-title">2014</span>
+            </br>
+            <span class="caption">check-up day. malungkot ka kasi may sakit na naman ako.</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2015.jpg">
+            </br></br>
+            <span class="caption-title">2015</span>
+            </br>
+            <span class="caption">our most spontaneous trip. salamat ideyatech haha.</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2016.jpg">
+            </br></br>
+            <span class="caption-title">2016</span>
+            </br>
+            <span class="caption">tam-awan village, baguio.</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2017.jpg">
+            </br></br>
+            <span class="caption-title">2017</span>
+            </br>
+            <span class="caption">very tough and very sad year for you. but look at you now? awuw.</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2018.jpg">
+            </br></br>
+            <span class="caption-title">2018</span>
+            </br>
+            <span class="caption">that travel na puro kamalasan tayo sa first day but ended up to be one of the best experiences we had.</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2019.jpg">
+            </br></br>
+            <span class="caption-title">2019</span>
+            </br>
+            <span class="caption">last travel before the pandemic. nakakamiss.</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2020.jpg">
+            </br></br>
+            <span class="caption-title">2020</span>
+            </br>
+            <span class="caption">??????????</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2021.jpg">
+            </br></br>
+            <span class="caption-title">2021</span>
+            </br>
+            <span class="caption">here we are now.</span>
+        </div>
+        <div class="last-page">
+            <div class="last-page-div">
+                <span class="last-caption-title">#ASonnyDayForAbbie</span>
+                </br>
+                <span class="caption">Soon.</span>
+            </div>
         </div>
     </div>
     <!--<div class="parallax__cover">
