--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="photo-col-r">
                 <span class="caption-title">2014</span>
                 </br>
-                <span class="caption">check-up day. malungkot ka kasi may sakit na naman ako.</span>
+                <span class="caption">check-up day. malungkot ka kasi may sakit na naman ako. so pinicturan na lang kita.</span>
             </div>
         </div>
         <div class="photo-row">
@@ -75,7 +75,7 @@
             <div class="photo-col">
                 <span class="caption-title">2017</span>
                 </br>
-                <span class="caption">very tough and very sad year for you. but look at you now? awuw.</span>
+                <span class="caption">very tough year for you. but look at you now? awuw.</span>
             </div>
             <div class="photo-col-r">
                 <img class="photo" src="./assets/images/2017.jpg">
@@ -88,14 +88,14 @@
             <div class="photo-col-r">
                 <span class="caption-title">2018</span>
                 </br>
-                <span class="caption">that travel na puro kamalasan tayo sa first day but ended up to be one of the best experiences we had.</span>
+                <span class="caption">that trip na puro kamalasan tayo sa first day but ended up to be one of the most memorable experiences we had.</span>
             </div>
         </div>
         <div class="photo-row">
             <div class="photo-col">
                 <span class="caption-title">2019</span>
                 </br>
-                <span class="caption">last travel before the pandemic. nakakamiss.</span>
+                <span class="caption">last trip before the pandemic. nakakamiss.</span>
             </div>
             <div class="photo-col-r">
                 <img class="photo" src="./assets/images/2019.jpg">
@@ -125,7 +125,7 @@
             <div class="last-page-div">
                 <span class="last-caption-title">#ASonnyDayForAbbie</span>
                 </br>
-                <span class="caption">Soon.</span>
+                <span class="caption">2022</span>
             </div>
         </div>
     </div>
@@ -149,7 +149,7 @@
             </br></br>
             <span class="caption-title">2014</span>
             </br>
-            <span class="caption">check-up day. malungkot ka kasi may sakit na naman ako.</span>
+            <span class="caption">check-up day. malungkot ka kasi may sakit na naman ako. so pinicturan na lang kita.</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2015.jpg">
@@ -170,21 +170,21 @@
             </br></br>
             <span class="caption-title">2017</span>
             </br>
-            <span class="caption">very tough and very sad year for you. but look at you now? awuw.</span>
+            <span class="caption">very tough year for you. but look at you now? awuw.</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2018.jpg">
             </br></br>
             <span class="caption-title">2018</span>
             </br>
-            <span class="caption">that travel na puro kamalasan tayo sa first day but ended up to be one of the best experiences we had.</span>
+            <span class="caption">that trip na puro kamalasan tayo sa first day but ended up to be one of the most memorable experiences we had.</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2019.jpg">
             </br></br>
             <span class="caption-title">2019</span>
             </br>
-            <span class="caption">last travel before the pandemic. nakakamiss.</span>
+            <span class="caption">last trip before the pandemic. nakakamiss.</span>
         </div>
         <div class="photo-row">
             <img class="photo" src="./assets/images/2020.jpg">
@@ -204,7 +204,7 @@
             <div class="last-page-div">
                 <span class="last-caption-title">#ASonnyDayForAbbie</span>
                 </br>
-                <span class="caption">Soon.</span>
+                <span class="caption">2022</span>
             </div>
         </div>
     </div>
