--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/jquery.js"></script>
     <script src="./js/main.js"></script>
+    <script data-ad-client="ca-pub-9692904070627459" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div id="asdfa" class="parallax">
